--- a/repaso.html
+++ b/repaso.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>repaso</title>
+    <link rel="stylesheet" href="assets/css/repaso.css">
+
 </head>
 <body>
     <h1>San Juan de Los Morros</h1>  
+    <h1>San Juan de Los Morros</h1>
+    <h1 class="h1">San Juan de Los Morros</h1>     
     <h2>Roscio</h2>
     <a href="https://www.google.com/" target="blank">
-        <img src="assets/images/oso.jpg" alt="oso" with="300"/>
+        <img src="assets/images/oso.jpg" alt="oso" with="100"/>
 
     </a>
     <ul>
