--- a/repaso.html
+++ b/repaso.html
@@ -12,7 +12,8 @@
     <h1>San Juan de Los Morros</h1>
     <h1 class="h1">San Juan de Los Morros</h1>     
     <h2>Roscio</h2>
-    <a href="https://www.google.com/" target="blank">
+    <h3>clase 4 hola</h3>
+    <a href="https://www>.google.com/" target="blank">
         <img src="assets/images/oso.jpg" alt="oso" with="100"/>
 
     </a>
