--- a/repaso.html
+++ b/repaso.html
@@ -11,7 +11,7 @@
     <h1>San Juan de Los Morros</h1>  
     <h1>San Juan de Los Morros</h1>
     <h1 class="h1">San Juan de Los Morros</h1>     
-    <h2>Roscio</h2>
+    <h2>Roscio compras</h2>
     <a href="https://www.google.com/" target="blank">
         <img src="assets/images/oso.jpg" alt="oso" with="100"/>
 
