--- a/repaso.html
+++ b/repaso.html
@@ -11,14 +11,10 @@
     <h1>San Juan de Los Morros</h1>  
     <h1>San Juan de Los Morros</h1>
     <h1 class="h1">San Juan de Los Morros</h1>     
-    <h2>Roscio</h2>
-<<<<<<< Updated upstream
+    <h2>Roscio compras varias</h2>
     <a href="https://www.google.com/" target="blank">
-=======
-    <h3>clase 4 zoro roronoa y monkey d luffy co</h3>
-    <a href="https://www>.google.com/" target="blank">
->>>>>>> Stashed changes
         <img src="assets/images/oso.jpg" alt="oso" with="100"/>
+        <img src="assets/images/gato.jpg" alt="gato" with="80"/>
 
     </a>
     <ul>
@@ -30,7 +26,7 @@
         <li><a href="#" target="_self">pais 1</a></li>
         <li><a href="#" target="_self">pais 2</a></li>
         <li><a href="#" target="_self">pais 3</a></li>
-        <li><a href="#" target="_self">pais 5</a></li>
+        <li><a href="#" target="_self">pais 4</a></li>
     </ol>
 </body>
 </html>
